<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signup_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signup_layout"
        app:layout_constraintEnd_toEndOf="@id/signup_layout"
        app:layout_constraintTop_toTopOf="@id/signup_layout"
        app:layout_constraintBottom_toBottomOf="@id/signup_layout"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/signup_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_name" />

        <EditText
            android:id="@+id/signup_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/signup_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_email"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/signup_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/signup_tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_password" />

        <EditText
            android:id="@+id/signup_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/signup_tv_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_date_of_birth"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/signup_et_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>